k8s/minikube/ingress/ingress-minikube.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-controller
  namespace: zuidui
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  ingressClassName: nginx
  rules:
  - host: tfm-local
    http:
      paths:
      - path: /(.*)
        pathType: Prefix
        backend:
          service:
            name: frontend
            port:
              number: 8080
      - path: /api/(.*)
        pathType: Prefix
        backend:
          service:
            name: api-gateway
            port:
              number: 8081
